[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/pong/paddle/paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/pong/scenery/walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/pong/ball/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/pong/scenery/net_line.gd" type="Script" id=4]
[ext_resource path="res://src/pong/pong_game.gd" type="Script" id=5]
[ext_resource path="res://audio/goal.wav" type="AudioStream" id=6]
[ext_resource path="res://src/pong/sfx/goal_sfx.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/pong/score/score.tscn" type="PackedScene" id=8]










[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 540 )

[node name="PongGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
GoalSfx = ExtResource( 7 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 960, 540 )

[node name="LeftPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 540 )

[node name="RightPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 1870, 540 )
rotation = 3.14159

[node name="LeftGoal" type="StaticBody2D" parent="."]
position = Vector2( -40, 540 )
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
shape = SubResource( 1 )

[node name="RightGoal" type="StaticBody2D" parent="."]
position = Vector2( 1960, 540 )
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
shape = SubResource( 1 )

[node name="Walls" parent="." instance=ExtResource( 2 )]

[node name="NetLine" type="Node2D" parent="."]
position = Vector2( 960, 0 )
script = ExtResource( 4 )
endPoint = Vector2( 0, 1080 )
dashStep = 0.011

[node name="Score" type="CenterContainer" parent="."]
margin_top = 25.0
margin_right = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Score"]
margin_left = 852.0
margin_right = 1068.0
margin_bottom = 165.0
custom_constants/separation = 50

[node name="LeftScore" parent="Score/HBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 83.0
margin_bottom = 165.0

[node name="RightScore" parent="Score/HBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 133.0
margin_right = 216.0
margin_bottom = 165.0

[node name="AudioGoal" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
[connection signal="left_scored" from="." to="Score/HBoxContainer/LeftScore" method="_on_PongGame_left_scored"]
[connection signal="right_scored" from="." to="Score/HBoxContainer/RightScore" method="_on_PongGame_right_scored"]
[connection signal="collided_goal" from="Ball" to="." method="_on_Ball_collided_goal"]
[connection signal="collided_paddle" from="Ball" to="." method="_on_Ball_collided_paddle"]
